# crafter

./: .env  .gitignore  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg  test_2.py  test_pick_and_place.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml  docker_build.yaml
notebooks/: curriculum_learning.ipynb  gripper_test.ipynb  latte_pick_and_place_demo.ipynb  pick_and_place.ipynb  test_camera.ipynb  test_pick.ipynb  test_pick_remote.ipynb  test_simon-olivier.ipynb  test_simon.ipynb
scripts/: builder.py  get_joints_name.py
src/locobot_connector/: CMakeLists.txt  package.xml
src/locobot_connector/launch/: cube_spawner.launch  locobot_sim.launch  real_locobot.launch  sim_locobot.launch
src/locobot_connector/scripts/: cube_spawner.py  moveit_target.py
src/locobot_connector/worlds/: cube_world.world
tests/tests_env/: test_locobot.py
visioncraft/: __init__.py
visioncraft/baseline/: callbacks.py  teleop_env.py  utils.py
visioncraft/envs/: __init__.py  custom_env_locobot.py  custom_env_widowx.py  custom_task.py  custom_widowx_env.py  locobot.py  widowx.py
visioncraft/envs/assets/locobot/: locobot_full.urdf
visioncraft/locobot/: arm_control.py  camera.py
visioncraft/utils/: teleop.py  transform_utils.py
visioncraft/vlm/: molmo_api.py  vlm_pipeline.py  vlm_selector.py
