# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visioncraft"
version = "0.1.0"
description = "Constructing structure using a robot arm have never been an easy task until ... visioncraft"
requires-python = ">=3.8"
dependencies = [
]

[tool.black]
line-length = 88